~ increment memory limits